Dependencies update. Logging settings fix. Dockerfile fix