@@ -1,10 +1,10 @@
 buildscript {
 	ext {
-		kotlinVer = '1.1.3-2'
-		springBootVer = '1.5.4.RELEASE'
-		kotlinLoggingVer = '1.4.4'
-		postgesqlVer = '42.1.1'
-		jFairyVer = '0.5.7'
+		kotlinVer = '1.1.51'
+		springBootVer = '1.5.8.RELEASE'
+		kotlinLoggingVer = '1.4.6'
+		postgesqlVer = '42.1.4'
+		jFairyVer = '0.5.8'
 		flywayVer = '4.2.0'
 
 		propdepsPluginVer = '0.0.10.RELEASE'
@@ -105,6 +105,17 @@ jar {
 	archiveName = 'app.jar'
 }
 
+tasks.withType(Test) {
+	maxParallelForks = Runtime.runtime.availableProcessors()
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '4.3'
+	distributionType = Wrapper.DistributionType.ALL
+}
+
+bootRepackage.mustRunAfter clean
+
 // gradle flywayMigrate
 // gradle flywayClean
 // gradle flywayInfo
@@ -176,19 +187,15 @@ dockerCompose.isRequiredBy(test)
 // gradle docker
 docker {
 	dependsOn jar, bootRepackage
-	name 'postgres-performance'
+	name 'app'
 	tags 'latest'
-	files tasks.jar.outputs
+	files jar.outputs
 	dockerfile file('src/main/docker/Dockerfile')
 	buildArgs([
-		PORT     : "8080",
-		JAVA_OPTS: "-Xms128m -Xmx256m"
+		JAVA_OPTS: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap',
+		PORT     : "8080"
 	])
 	pull true
 }
 
-wrapper {
-	gradleVersion '4.0'
-}
-
-bootRepackage.mustRunAfter clean
+task stage(dependsOn: ['build', 'clean'])
